# argsearch

./: .gitignore  LICENSE  README.md  argsearch.py  pyproject.toml
argsearch/: __init__.py  commands.py  interface.py  optimization.py  ranges.py  strategies.py
