[tool.poetry]
name = "argsearch"
version = "0.1.0"
description = "Runs random and grid searches on the argument values of any command."
authors = ["maxwells-daemons <aidanswope@gmail.com>"]
maintainers = ["maxwells-daemons <aidanswope@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/maxwells-daemons/argsearch"
repository = "https://github.com/maxwells-daemons/argsearch"
keywords = ["search", "cli"]
classifiers = [
    "Environment :: Console",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
    "Topic :: Utilities"
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
argsearch = "argsearch:main"
