[tool.poetry]
name = "argsearch"
version = "0.2.1"
description = "Run a command many times with different combinations of its inputs."
authors = ["Aidan Swope <aidanswope@gmail.com>"]
maintainers = ["Aidan Swope <aidanswope@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/maxwells-daemons/argsearch"
repository = "https://github.com/maxwells-daemons/argsearch"
keywords = ["search", "cli"]
classifiers = [
    "Environment :: Console",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
    "Topic :: Utilities"
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.1"
tqdm = "^4.49.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
argsearch = "argsearch:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
